Adds svg file on SplashScreen for Android.

--- a/XamarinFormsSplashscreenRecipe.Android/XamarinFormsSplashscreenRecipe.Android.csproj
+++ b/XamarinFormsSplashscreenRecipe.Android/XamarinFormsSplashscreenRecipe.Android.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash.xml" />
+    <AndroidResource Include="Resources\drawable\svg.xml" />
     <AndroidResource Include="Resources\values\styles.xml" />
     <AndroidResource Include="Resources\values\colors.xml" />
     <AndroidResource Include="Resources\mipmap-anydpi-v26\icon.xml" />
