Adds SplashScreen for iOS (png).

--- a/XamarinFormsSplashscreenRecipe.iOS/XamarinFormsSplashscreenRecipe.iOS.csproj
+++ b/XamarinFormsSplashscreenRecipe.iOS/XamarinFormsSplashscreenRecipe.iOS.csproj
@@ -133,4 +133,7 @@
       <Name>XamarinFormsSplashscreenRecipe</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="XamarinLogo.png" />
+  </ItemGroup>
 </Project>
